--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -98,10 +98,14 @@ div[onClick] ul:hover {
 /* 모달 내 textarea 스타일 */
 textarea {
     width: 100%;
-    height: 60vh;
+    height: 50vh;
     padding: 8px;
     box-sizing: border-box;
     font-family: monospace;
     resize: vertical;
+}
+
+.textarea-10vh{
+	height: 10vh;
 }
 
